--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pitchwise-deck-analyzer</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Spider-Analysis</title>
+    <meta name="description" content="Spider- An AI-powered tool for analyzing and visualizing data for your investments" />
+    <meta name="author" content="Neural-Arc" />
 
-    <meta property="og:title" content="pitchwise-deck-analyzer" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Spider-Analysis" />
+    <meta property="og:description" content="Spider- An AI-powered tool for analyzing and visualizing data for your investments" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
